# EmbodiedLab

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.codex/: hooks.json
.codex/hooks/: enforce_workspace.py
docs/: GIT_WORKFLOW.md  MVP.md  ROADMAP.md
examples/configs/: baseline.yaml  candidate.yaml
src/embodiedlab/: __init__.py  config_diff.py
tests/: test_config_diff.py  test_streamlit_app.py  test_workspace_guard.py
