[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embodiedlab"
version = "0.1.0"
description = "Local diagnostics and learning workflow for VLA/WAM experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "PyYAML>=6.0",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
embodiedlab-config-diff = "embodiedlab.config_diff:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
